[gd_scene load_steps=3 format=3 uid="uid://8t2fbmkfnkr0"]

[ext_resource type="Script" path="res://src/Scenes/options_menu.gd" id="1_0opst"]
[ext_resource type="Texture2D" uid="uid://cmkvtdnn44yu8" path="res://Assets/Images/space background.jpg" id="2_1h3n4"]

[node name="Options Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0opst")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 49.0
offset_top = 71.0
offset_right = 356.0
offset_bottom = 510.0

[node name="Back Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 373.0
offset_top = 395.0
offset_right = 805.0
offset_bottom = 563.0

[node name="Settings" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Settings"

[node name="Controls" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Controls"

[node name="Background" type="TextureRect" parent="."]
light_mask = 2
visibility_layer = 2
layout_mode = 0
offset_right = 1164.0
offset_bottom = 673.0
texture = ExtResource("2_1h3n4")
expand_mode = 1

[connection signal="pressed" from="VBoxContainer/Back Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer2/Controls" to="." method="_on_controls_pressed"]
